# NeRFly

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  commands.txt  phase1_commands.txt  px4_commands.txt
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/nbv_demo/lib/nbv_demo/: image_saver_node  mission_node  snapshot_node
install/nbv_demo/share/nbv_demo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nbv_demo/share/nbv_demo/config/: mission_params.yaml
install/nbv_demo/share/nbv_demo/launch/: mission.launch.py
log/: latest_build
scripts/: launch_gz_world.sh  run_mission.sh
src/nbv_demo/: package.xml  setup.cfg  setup.py
src/nbv_demo/config/: mavros_pluginlists.yaml  mission_params.yaml
src/nbv_demo/launch/: mission.launch.py
src/nbv_demo/nbv_demo/: snapshot_node.py
worlds/: nbv_scene.sdf
